refactor: memberservice 변수명 변경 및 람다식 방식에서 메서드 참조형으로 변경#35